--- a/src/fts_examples/config/advanced/fsdp/fts_fsdp_awp_overrides_offload_profile.yaml
+++ b/src/fts_examples/config/advanced/fsdp/fts_fsdp_awp_overrides_offload_profile.yaml
@@ -1,41 +1,15 @@
-data:
-  class_path: fts_examples.fts_superglue.RteBoolqDataModule
-  init_args:
-    model_name_or_path: microsoft/deberta-v3-base
-    task_name: rte
-    tokenizers_parallelism: false
-    max_seq_length: 128
-    train_batch_size: 16
-    eval_batch_size: 16
 model:
   class_path: fts_examples.fts_fsdp_superglue.RteBoolqModuleFSDP
-  init_args:
-    optimizer_init:
-      class_path: torch.optim.AdamW
-      init_args:
-        weight_decay: 1.0e-05
-        eps: 1.0e-07
-        lr: 1.0e-05
-    lr_scheduler_init:
-      class_path: torch.optim.lr_scheduler.CosineAnnealingWarmRestarts
-      init_args:
-        T_0: 1
-        T_mult: 2
-        eta_min: 1.0e-07
-    pl_lrs_cfg:
-      interval: epoch
-      frequency: 1
-      name: CosineAnnealingWithWarmRestartsLR
 trainer:
   limit_train_batches: 7
-  max_epochs: 2
+  max_epochs: 4
   devices: 2
   precision: 32 # profile w/o precision until https://github.com/pytorch/pytorch/issues/82206 is resolved
   callbacks:
   - class_path: finetuning_scheduler.FinetuningScheduler
     init_args:
-      ft_schedule: ./src/fts_examples/config/RteBoolqModule_ft_schedule_deberta_base_fsdp.yaml
-      max_depth: 1
+      ft_schedule: ./config/RteBoolqModule_ft_schedule_deberta_base_fsdp.yaml
+      max_depth: 2
       strategy_adapter_cfg:
         awp_overrides: ["model.pooler.dense", "model.classifier"]
   - class_path: finetuning_scheduler.FTSCheckpoint
@@ -54,22 +28,29 @@ trainer:
     class_path: pytorch_lightning.loggers.TensorBoardLogger
     init_args:
       save_dir: lightning_logs
-      name: fts_fsdp_awp_override_offload_profile
+      name: fts_fsdp_awp_overrides_offload_profile
   profiler:
-    class_path: pytorch_lightning.profilers.pytorch.PyTorchProfiler
+    class_path: fts_examples.fts_fsdp_superglue.ExtendedPyTorchProfiler
     init_args:
       filename: fts_fsdp_awp_text_profile
+      max_name_column_width: 100
+      sort_by_key: cuda_time_total
+      schedule_cfg:
+        # note, there is currently (as of lightning 1.9.0 release) an open issue regarding superflous profiler messages
+        # https://github.com/pytorch/pytorch/issues/91886
+        skip_first: 20  # comment if you want to profile the first fine-tuning phase instead of the final one
+        wait: 1
+        warmup: 1
+        active: 3
     dict_kwargs:
-      use_cuda: true
       with_stack: true
       profile_memory: true
       record_shapes: true
       row_limit: 50
-      # uncomment below to enable flamegraph export (after relevant PL patch)
-      # export_to_flame_graph: true
-      # metric: self_cuda_time_total
   strategy:
     class_path: pytorch_lightning.strategies.DDPFullyShardedNativeStrategy
     init_args:
       cpu_offload: true
+      activation_checkpointing:
+      - transformers.models.deberta_v2.modeling_deberta_v2.DebertaV2Layer
       auto_wrap_policy: fts_examples.fts_fsdp_superglue.deberta_awp
