--- a/src/fts_examples/config/advanced/fsdp/fts_fsdp_awp_overrides_profile.yaml
+++ b/src/fts_examples/config/advanced/fsdp/fts_fsdp_awp_overrides_profile.yaml
@@ -9,6 +9,8 @@ trainer:
     init_args:
       ft_schedule: ./config/RteBoolqModule_ft_schedule_deberta_base_fsdp.yaml
       max_depth: 2
+      strategy_adapter_cfg:
+        awp_overrides: ["model.pooler.dense", "model.classifier"]
   - class_path: finetuning_scheduler.FTSCheckpoint
     init_args:
       save_top_k: 1
@@ -25,7 +27,7 @@ trainer:
     class_path: pytorch_lightning.loggers.TensorBoardLogger
     init_args:
       save_dir: lightning_logs
-      name: fts_ddp_fsdp_baseline_profile
+      name: fts_fsdp_awp_overrides_profile
   profiler:
     class_path: fts_examples.fts_fsdp_superglue.ExtendedPyTorchProfiler
     init_args:
@@ -44,3 +46,11 @@ trainer:
       profile_memory: true
       record_shapes: true
       row_limit: 50
+  strategy:
+    class_path: pytorch_lightning.strategies.DDPFullyShardedNativeStrategy
+    init_args:
+      cpu_offload: false
+      activation_checkpointing:
+      - transformers.models.deberta_v2.modeling_deberta_v2.DebertaV2Layer
+      auto_wrap_policy: fts_examples.fts_fsdp_superglue.deberta_awp  # comment to generate debugging demo
+      # auto_wrap_policy: fts_examples.fts_fsdp_superglue.degenerate_deberta_awp  # uncomment to generate debugging demo
