--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ addopts =
     --color=yes
     --disable-pytest-warnings
     --ignore-glob='src/fts_examples/ipynb_src/*.py'
+    --ignore='.actions/assistant.py'
 # filterwarnings =
     # error out on PL deprecation warnings - ensures the code and tests are kept up-to-date
     # error::pytorch_lightning.utilities.warnings.LightningDeprecationWarning
