--- a/setup.cfg
+++ b/setup.cfg
@@ -56,8 +56,11 @@ verbose = 2
 # https://pep8.readthedocs.io/en/latest/intro.html#error-codes
 format = pylint
 ignore =
-    E731  # Ignore "Do not assign a lambda expression, use a def"
-    W503  # Ignore "Line break occurred before a binary operator"
-    E203  # Ignore "whitespace before ':'"
+    # Ignore "Do not assign a lambda expression, use a def"
+    E731
+    # Ignore "Line break occurred before a binary operator"
+    W503
+    # Ignore "whitespace before ':'"
+    E203
 per-file-ignores =
     src/fts_examples/ipynb_src/fts_superglue_nb.py:E501,F401,F821
