update rtd config with debugging info, update FSDP tutorial link now that it will resolve, minor update to nb example

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -44,9 +44,15 @@ build:
     - texlive-latex-extra
     - dvipng
     - texlive-pictures
+  jobs:
+    pre_install:
+      - echo ${READTHEDOCS_VERSION}
+      - env
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
   install:
     - requirements: requirements/base.txt
     - requirements: requirements/docs.txt
+    - method: pip
+      path: .
