--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,37 @@ line_length = 120
 force_sort_within_sections = "False"
 order_by_type = "False"
 
-
 [tool.black]
 line-length = 120
 
+[tool.ruff]
+line-length = 120
+# Enable Pyflakes `E` and `F` codes by default.
+select = [
+    "E", "W",  # see: https://pypi.org/project/pycodestyle
+    "F",  # see: https://pypi.org/project/pyflakes
+]
+ignore = [
+    "E731", # Do not assign a lambda expression, use a def
+]
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".git",
+    "docs",
+    ".tox",
+    "*.egg",
+    "build",
+    "temp",
+]
+ignore-init-module-imports = true
+format = "pylint"
+
+[tool.ruff.per-file-ignores]
+"src/fts_examples/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]
+
+[tool.ruff.mccabe]
+# Unlike Flake8, default to a complexity level of 10.
+max-complexity = 10
 
 [tool.mypy]
 files = ["src/finetuning_scheduler"]
@@ -44,6 +71,27 @@ exclude = ['tests/.*']
 # mypy | tr ':' ' ' |  awk '{print $1}' | sort | uniq | sed 's/\.py//g' | sed 's|\/|\.|g' | xargs -I {} echo '"{}",'
 # module = []
 # ignore_errors = "True"
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "warnings",
+    "pass",
+    "rank_zero_warn",
+    "raise NotImplementedError",
+]
+
+[tool.pytest.ini_options]
+pythonpath = "tests"
+norecursedirs = [
+    ".git",
+    ".github",
+    "dist",
+    "build",
+    "docs",
+]
+addopts = "--strict-markers --doctest-modules --color=yes --disable-pytest-warnings --ignore-glob='src/fts_examples/ipynb_src/*.py' --ignore='.actions/assistant.py'"
+junit_duration_report = "call"
 
 [tool.jupytext]
 notebook_metadata_filter = "-all"
