initial post-1.9 PL compatibility updates

--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -14,7 +14,7 @@ trigger:
       - "refs/tags/*"
   paths:
     include:
-      - "setup.*"  # setup.py/cfg
+      - "setup.*"  # setup.py
       - "requirements.txt"
       - "pyproject.toml"
       - ".codecov.yml"
@@ -30,7 +30,7 @@ pr:
     - release/*
   paths:
     include:
-      - "setup.*"  # setup.py/cfg
+      - "setup.*"  # setup.py
       - "requirements.txt"
       - "pyproject.toml"
       - ".codecov.yml"
