--- a/src/fts_examples/config/advanced/fsdp/fts_fsdp_awp_overrides_profile.yaml
+++ b/src/fts_examples/config/advanced/fsdp/fts_fsdp_awp_overrides_profile.yaml
@@ -47,7 +47,7 @@ trainer:
       record_shapes: true
       row_limit: 50
   strategy:
-    class_path: pytorch_lightning.strategies.DDPFullyShardedNativeStrategy
+    class_path: pytorch_lightning.strategies.FSDPStrategy
     init_args:
       cpu_offload: false
       activation_checkpointing:
