--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -66,26 +66,36 @@ jobs:
     steps:
 
     - bash: |
-        pip install --upgrade pip requests
+        mkdir /tmp/venvs
+        python -m virtualenv -p python3.10 /tmp/venvs/fts_dev
+      displayName: 'Create virtual environment'
+
+    - bash: |
+        . /tmp/venvs/fts_dev/bin/activate
+        pip install --upgrade pip requests setuptools
         pip install -e . --no-warn-script-location --requirement requirements/devel.txt
       env:
         PACKAGE_NAME: "pytorch"
       displayName: 'Install dependencies'
 
     - bash: |
+        . /tmp/venvs/fts_dev/bin/activate
         python requirements/collect_env_details.py
         python -c "import torch ; mgpu = torch.cuda.device_count() ; assert mgpu >= 2, f'GPU: {mgpu}'"
       displayName: 'Env details'
 
     - bash: |
+        . /tmp/venvs/fts_dev/bin/activate
         python -m coverage run --source src/finetuning_scheduler -m pytest src/finetuning_scheduler tests -v --junitxml=$(Build.Repository.LocalPath)/test-results.xml --durations=50
       displayName: 'Testing: standard'
 
     - bash: |
+        . /tmp/venvs/fts_dev/bin/activate
         bash ./tests/standalone_tests.sh -k test_f
       displayName: 'Testing: standalone multi-gpu'
 
     - bash: |
+        . /tmp/venvs/fts_dev/bin/activate
         python -m coverage report
         python -m coverage xml
         python -m coverage html
@@ -96,5 +106,6 @@ jobs:
 
     - script: |
         set -e
+        . /tmp/venvs/fts_dev/bin/activate
         python -m pytest src/fts_examples -v --maxfail=1 --durations=0 -W ignore:\`np.object\`:DeprecationWarning -W ignore:'`np.int` is':DeprecationWarning
       displayName: 'Testing: examples'
