--- a/src/fts_examples/config/fts_defaults.yaml
+++ b/src/fts_examples/config/fts_defaults.yaml
@@ -31,7 +31,7 @@ trainer:
   max_epochs: 1000
   accelerator: gpu
   strategy: ddp_find_unused_parameters_false
-  precision: 16
+  precision: 16-mixed
   logger:
     class_path: pytorch_lightning.loggers.TensorBoardLogger
     init_args:
