--- a/src/fts_examples/config/advanced/fsdp/fts_ddp_fsdp_baseline_profile.yaml
+++ b/src/fts_examples/config/advanced/fsdp/fts_ddp_fsdp_baseline_profile.yaml
@@ -22,7 +22,7 @@ trainer:
       verbose: false
       mode: min
   logger:
-    class_path: pytorch_lightning.loggers.TensorBoardLogger
+    class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
       save_dir: lightning_logs
       name: fts_ddp_fsdp_baseline_profile
