--- a/src/fts_examples/config/advanced/reinit_lr/fts_explicit_reinit_lr.yaml
+++ b/src/fts_examples/config/advanced/reinit_lr/fts_explicit_reinit_lr.yaml
@@ -12,7 +12,7 @@ model:
       name: Explicit_Reinit_LR_Scheduler
 trainer:
   callbacks:
-  - class_path: pytorch_lightning.callbacks.LearningRateMonitor
+  - class_path: lightning.pytorch.callbacks.LearningRateMonitor
   - class_path: finetuning_scheduler.FinetuningScheduler
     init_args:
       ft_schedule: ./src/fts_examples/config/advanced/reinit_lr/explicit_reinit_lr.yaml
@@ -31,7 +31,7 @@ trainer:
       verbose: false
       mode: min
   logger:
-    class_path: pytorch_lightning.loggers.TensorBoardLogger
+    class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
       save_dir: lightning_logs
       name: fts_explicit_reinit_lr
