--- a/src/fts_examples/config/fts_explicit.yaml
+++ b/src/fts_examples/config/fts_explicit.yaml
@@ -17,7 +17,7 @@ trainer:
       verbose: false
       mode: min
   logger:
-    class_path: pytorch_lightning.loggers.TensorBoardLogger
+    class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
       save_dir: lightning_logs
       name: fts_explicit
