--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ format = "pylint"
 
 [tool.ruff.per-file-ignores]
 "src/fts_examples/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]
+"src/fts_examples/legacy/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]
 
 [tool.ruff.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
