--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ ignore-init-module-imports = true
 format = "pylint"
 
 [tool.ruff.per-file-ignores]
-"src/fts_examples/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]
+"src/fts_examples/stable/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]
 "src/fts_examples/legacy/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]
 
 [tool.ruff.mccabe]
@@ -91,7 +91,7 @@ norecursedirs = [
     "build",
     "docs",
 ]
-addopts = "--strict-markers --doctest-modules --color=yes --disable-pytest-warnings --ignore-glob='src/fts_examples/ipynb_src/*.py' --ignore='.actions/assistant.py'"
+addopts = "--strict-markers --doctest-modules --color=yes --disable-pytest-warnings --ignore-glob='src/fts_examples/*/ipynb_src/*.py' --ignore='.actions/assistant.py'"
 junit_duration_report = "call"
 
 [tool.jupytext]
