--- a/src/fts_examples/legacy/config/advanced/fsdp/fts_fsdp_awp_overrides_offload_profile.yaml
+++ b/src/fts_examples/legacy/config/advanced/fsdp/fts_fsdp_awp_overrides_offload_profile.yaml
@@ -1,5 +1,5 @@
 model:
-  class_path: fts_examples.fts_fsdp_superglue.RteBoolqModuleFSDP
+  class_path: fts_examples.legacy.fts_fsdp_superglue.RteBoolqModuleFSDP
 trainer:
   limit_train_batches: 7
   max_epochs: 4
@@ -30,7 +30,7 @@ trainer:
       save_dir: lightning_logs
       name: fts_fsdp_awp_overrides_offload_profile
   profiler:
-    class_path: fts_examples.fts_fsdp_superglue.ExtendedPyTorchProfiler
+    class_path: fts_examples.legacy.fts_fsdp_superglue.ExtendedPyTorchProfiler
     init_args:
       filename: fts_fsdp_awp_text_profile
       max_name_column_width: 100
@@ -53,4 +53,4 @@ trainer:
       cpu_offload: true
       activation_checkpointing:
       - transformers.models.deberta_v2.modeling_deberta_v2.DebertaV2Layer
-      auto_wrap_policy: fts_examples.fts_fsdp_superglue.deberta_awp
+      auto_wrap_policy: fts_examples.legacy.fts_fsdp_superglue.deberta_awp
