--- a/src/fts_examples/legacy/config/advanced/fsdp/fts_fsdp_awp_overrides_profile.yaml
+++ b/src/fts_examples/legacy/config/advanced/fsdp/fts_fsdp_awp_overrides_profile.yaml
@@ -1,5 +1,5 @@
 model:
-  class_path: fts_examples.fts_fsdp_superglue.RteBoolqModuleFSDP
+  class_path: fts_examples.legacy.fts_fsdp_superglue.RteBoolqModuleFSDP
 trainer:
   limit_train_batches: 7
   max_epochs: 4
@@ -29,7 +29,7 @@ trainer:
       save_dir: lightning_logs
       name: fts_fsdp_awp_overrides_profile
   profiler:
-    class_path: fts_examples.fts_fsdp_superglue.ExtendedPyTorchProfiler
+    class_path: fts_examples.legacy.fts_fsdp_superglue.ExtendedPyTorchProfiler
     init_args:
       filename: fts_fsdp_awp_text_profile
       max_name_column_width: 100
@@ -52,5 +52,5 @@ trainer:
       cpu_offload: false
       activation_checkpointing:
       - transformers.models.deberta_v2.modeling_deberta_v2.DebertaV2Layer
-      auto_wrap_policy: fts_examples.fts_fsdp_superglue.deberta_awp  # comment to generate debugging demo
-      # auto_wrap_policy: fts_examples.fts_fsdp_superglue.degenerate_deberta_awp  # uncomment to generate debugging demo
+      auto_wrap_policy: fts_examples.legacy.fts_fsdp_superglue.deberta_awp  # comment to generate debugging demo
+      # auto_wrap_policy: fts_examples.legacy.fts_fsdp_superglue.degenerate_deberta_awp  # uncomment for debugging demo
