--- a/src/fts_examples/stable/config/advanced/reinit_lr/fts_explicit_reinit_lr.yaml
+++ b/src/fts_examples/stable/config/advanced/reinit_lr/fts_explicit_reinit_lr.yaml
@@ -1,5 +1,5 @@
 model:
-  class_path: fts_examples.fts_superglue.RteBoolqModule
+  class_path: fts_examples.stable.fts_superglue.RteBoolqModule
   init_args:
     lr_scheduler_init:
       class_path: torch.optim.lr_scheduler.LinearLR
@@ -15,7 +15,7 @@ trainer:
   - class_path: lightning.pytorch.callbacks.LearningRateMonitor
   - class_path: finetuning_scheduler.FinetuningScheduler
     init_args:
-      ft_schedule: ./src/fts_examples/config/advanced/reinit_lr/explicit_reinit_lr.yaml
+      ft_schedule: ./src/fts_examples/stable/config/advanced/reinit_lr/explicit_reinit_lr.yaml
       max_depth: 2
       restore_best: false  # disable restore_best for lr pattern clarity
   - class_path: finetuning_scheduler.FTSCheckpoint
