update .github workflow defs, adjust_versions, azure gpu workflow and dockerfile base def for 2.0

--- a/dockers/base-cuda/Dockerfile
+++ b/dockers/base-cuda/Dockerfile
@@ -89,7 +89,8 @@ RUN \
         # or target a specific cuda build of latest stable packages
         # pip install torch==1.10.2+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html; \
         # pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu118; \
-        pip install --pre torch torchvision -f https://download.pytorch.org/whl/nightly/cu118/torch_nightly.html; \
+        #pip install --pre torch torchvision -f https://download.pytorch.org/whl/nightly/cu118/torch_nightly.html; \
+        pip install --pre torch torchvision -f https://download.pytorch.org/whl/test/cu118/torch_test.html; \
     fi && \
     # Install all requirements
     pip install -r requirements/devel.txt --no-cache-dir && \
