--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -44,8 +44,12 @@ jobs:
   - job: pytest
     strategy:
       matrix:
-        'PyTorch - stable':
-          image: "speediedan/finetuning-scheduler:py3.10-pt1.13.1-azpl-init"
+        'PyTorch | 1.13.1':
+          image: "speediedan/finetuning-scheduler:py3.10-pt1.13.1-pl2.0-azpl-init"
+          scope: "1x"
+        'PyTorch | latest':
+          image: "speediedan/finetuning-scheduler:py3.10-pt2.0.0-pl2.0-azpl-init"
+          scope: ""
     # how long to run the job before automatically cancelling
     timeoutInMinutes: "100"
     # how much time to give 'run always even if cancelled tasks' before stopping them
@@ -74,8 +78,8 @@ jobs:
         . /tmp/venvs/fts_dev/bin/activate
         pip install --upgrade pip requests setuptools
         pip install -e . --no-warn-script-location --requirement requirements/devel.txt
-      env:
-        PACKAGE_NAME: "pytorch"
+      #env:
+        #PACKAGE_NAME: "pytorch"
       displayName: 'Install dependencies'
 
     - bash: |
@@ -108,4 +112,5 @@ jobs:
         set -e
         . /tmp/venvs/fts_dev/bin/activate
         python -m pytest src/fts_examples/stable -v --maxfail=1 --durations=0 -W ignore:\`np.object\`:DeprecationWarning -W ignore:'`np.int` is':DeprecationWarning
+      condition: ne(variables['scope'], '1x')
       displayName: 'Testing: examples'
