--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -41,11 +41,11 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, windows-2022, macOS-11]
-        python-version: ["3.7", "3.10"]  # minimum, maximum
+        python-version: ["3.8", "3.10"]  # minimum, maximum
         # tests will include oldest and newest tested patch versions of pytorch-lightning
         requires: ["oldest", "latest"]
         release: ["latest"]
-        exclude:  # PyTorch 1.9 does not support python 3.10
+        exclude:  # Oldest supported PyTorch often does not support newest supported python
           - {os: ubuntu-20.04, python-version: "3.10", requires: "oldest"}
           - {os: windows-2022, python-version: "3.10", requires: "oldest"}
           - {os: macOS-11, python-version: "3.10", requires: "oldest"}
@@ -66,10 +66,10 @@ jobs:
     - name: Reset caching
       run: python -c "import time; days = time.time() / 60 / 60 / 24; print(f'TIME_PERIOD=d{int(days / 2) * 2}')" >> $GITHUB_ENV
 
-    - name: basic setup
-      run: |
-        pip --version
-        pip install -q fire
+    # - name: basic setup
+    #   run: |
+    #     pip --version
+    #     pip install -q fire
 
     - name: Set min. dependencies
       if: matrix.requires == 'oldest'
@@ -91,8 +91,8 @@ jobs:
           ${{ runner.os }}-pip-td${{ env.TIME_PERIOD }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-
 
     - name: Install extra dependencies
-      env:
-        PACKAGE_NAME: "pytorch"
+      # env:
+      #   PACKAGE_NAME: "pytorch"
       run: |
         pip install --requirement requirements/base.txt --upgrade
         pip install --requirement requirements/examples.txt --upgrade
