--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -45,7 +45,7 @@ jobs:
         # tests will include oldest and newest tested patch versions of pytorch-lightning
         requires: ["oldest", "latest"]
         release: ["latest"]
-        exclude:  # Oldest supported PyTorch often does not support newest supported python
+        exclude:  # PyTorch 1.9 does not support python 3.10
           - {os: ubuntu-20.04, python-version: "3.10", requires: "oldest"}
           - {os: windows-2022, python-version: "3.10", requires: "oldest"}
           - {os: macOS-11, python-version: "3.10", requires: "oldest"}
@@ -66,10 +66,10 @@ jobs:
     - name: Reset caching
       run: python -c "import time; days = time.time() / 60 / 60 / 24; print(f'TIME_PERIOD=d{int(days / 2) * 2}')" >> $GITHUB_ENV
 
-    # - name: basic setup
-    #   run: |
-    #     pip --version
-    #     pip install -q fire
+    - name: basic setup
+      run: |
+        pip --version
+        pip install --requirement requirements/cli.txt --upgrade
 
     - name: Set min. dependencies
       if: matrix.requires == 'oldest'
@@ -83,7 +83,7 @@ jobs:
       run: echo "::set-output name=dir::$(pip cache dir)"
 
     - name: pip cache
-      uses: actions/cache@v3
+      uses: actions/cache@v2
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
         key: ${{ runner.os }}-pip-td${{ env.TIME_PERIOD }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-${{ hashFiles('requirements/base.txt') }}-${{ hashFiles('requirements/extra.txt') }}
@@ -113,7 +113,7 @@ jobs:
     #   shell: bash
 
     - name: Cache datasets
-      uses: actions/cache@v3
+      uses: actions/cache@v2
       with:
         path: Datasets
         key: pl-dataset
