--- a/src/fts_examples/stable/config/advanced/fsdp/fts_fsdp_awp_overrides_profile.yaml
+++ b/src/fts_examples/stable/config/advanced/fsdp/fts_fsdp_awp_overrides_profile.yaml
@@ -1,5 +1,3 @@
-model:
-  class_path: fts_examples.stable.fts_fsdp_superglue.RteBoolqModuleFSDP
 trainer:
   limit_train_batches: 7
   max_epochs: 4
@@ -23,13 +21,30 @@ trainer:
       patience: 2 # limited patience for example
       verbose: false
       mode: min
+  strategy:
+    class_path: lightning.pytorch.strategies.FSDPStrategy
+    init_args:
+      cpu_offload: false
+      activation_checkpointing:
+      - transformers.models.deberta_v2.modeling_deberta_v2.DebertaV2Layer
+      auto_wrap_policy:
+        class_path: torch.distributed.fsdp.wrap.ModuleWrapPolicy
+        init_args:
+          # comment below to generate debugging demo
+          module_classes: !!set
+            ? transformers.models.deberta_v2.modeling_deberta_v2.DebertaV2Layer
+            ? transformers.models.deberta_v2.modeling_deberta_v2.DebertaV2Embeddings
+            ? transformers.models.deberta_v2.modeling_deberta_v2.DebertaV2Encoder
+          # uncomment below to generate debugging demo
+          # module_classes: !!set
+          #   ? transformers.models.deberta_v2.modeling_deberta_v2.DebertaV2Layer
   logger:
     class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
       save_dir: lightning_logs
       name: fts_fsdp_awp_overrides_profile
   profiler:
-    class_path: fts_examples.stable.fts_fsdp_superglue.ExtendedPyTorchProfiler
+    class_path: fts_examples.stable.extended_profiler.ExtendedPyTorchProfiler
     init_args:
       filename: fts_fsdp_awp_text_profile
       max_name_column_width: 100
@@ -46,11 +61,3 @@ trainer:
       profile_memory: true
       record_shapes: true
       row_limit: 50
-  strategy:
-    class_path: lightning.pytorch.strategies.FSDPStrategy
-    init_args:
-      cpu_offload: false
-      activation_checkpointing:
-      - transformers.models.deberta_v2.modeling_deberta_v2.DebertaV2Layer
-      auto_wrap_policy: fts_examples.stable.fts_fsdp_superglue.deberta_awp  # comment to generate debugging demo
-      # auto_wrap_policy: fts_examples.fts_fsdp_superglue.degenerate_deberta_awp  # uncomment to generate debugging demo
