use canonical Lightning import format for tutorial and examples in documentation, bump version to 2.1.0dev, update Lightning dep sha

--- a/dockers/release/Dockerfile
+++ b/dockers/release/Dockerfile
@@ -35,5 +35,5 @@ RUN \
 RUN python --version && \
     pip --version && \
     pip list && \
-    python -c "import lightning as pl; print(pl.__version__)" && \
+    python -c "import lightning as L; print(L.__version__)" && \
     python -c "import finetuning_scheduler as fts; print(fts.__version__)"
