update simplified FTS FSDP example now that https://github.com/pytorch/pytorch/pull/99175 has been merged, downgrade no local shard constraint to DEBUG level info

--- a/src/fts_examples/stable/config/advanced/fsdp/fts_fsdp_basic_profile.yaml
+++ b/src/fts_examples/stable/config/advanced/fsdp/fts_fsdp_basic_profile.yaml
@@ -5,7 +5,7 @@ trainer:
   callbacks:
   - class_path: finetuning_scheduler.FinetuningScheduler
     init_args:
-      ft_schedule: ./config/RteBoolqModule_ft_schedule_deberta_base_fsdp_basic.yaml
+      ft_schedule: ./config/RteBoolqModule_ft_schedule_deberta_base_fsdp.yaml
       max_depth: 2
   - class_path: finetuning_scheduler.FTSCheckpoint
     init_args:
@@ -44,7 +44,7 @@ trainer:
       max_name_column_width: 100
       sort_by_key: cuda_time_total
       schedule_cfg:
-        # note, there is currently (as of 2023.04.08) an open issue regarding superflous profiler messages
+        # note, there is currently (as of 2023.04.15) an open issue regarding superfluous profiler messages
         # https://github.com/pytorch/pytorch/issues/91886
         skip_first: 20  # comment if you want to profile the first fine-tuning phase instead of the final one
         wait: 1
