refactored `test_fsdp` to drive all custom test configuration from a single dict, support  PT FSDP 2.1.0dev features, make use_orig_params default to `False`, use standalone codecov instead of python module, update PL dev req sha, use mixed precision for cpu_offload profile example now that 82206 has been resolved, use native `torch.distributed.is_available()` instead of PL version for `no_sync` test

--- a/src/fts_examples/stable/config/advanced/fsdp/fts_fsdp_awp_overrides_offload_profile.yaml
+++ b/src/fts_examples/stable/config/advanced/fsdp/fts_fsdp_awp_overrides_offload_profile.yaml
@@ -2,7 +2,7 @@ trainer:
   limit_train_batches: 7
   max_epochs: 4
   devices: 2
-  precision: 32 # profile w/o precision until https://github.com/pytorch/pytorch/issues/82206 is resolved
+  precision: 16
   callbacks:
   - class_path: finetuning_scheduler.FinetuningScheduler
     init_args:
