adjust default example log name

--- a/src/fts_examples/stable/config/fts_defaults.yaml
+++ b/src/fts_examples/stable/config/fts_defaults.yaml
@@ -36,3 +36,4 @@ trainer:
     class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
       save_dir: lightning_logs
+      name: fts_default
