--- a/src/fts_examples/stable/config/fts_defaults.yaml
+++ b/src/fts_examples/stable/config/fts_defaults.yaml
@@ -31,8 +31,10 @@ trainer:
   max_epochs: 1000
   accelerator: gpu
   strategy: ddp_find_unused_parameters_false
-  precision: 16-true
+  # precision: 16-true  # temporarily disable until full 16-true FSDP support is available
+  precision: 16-mixed
   logger:
     class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
       save_dir: lightning_logs
+      name: fts_default
