add new coverage exception

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ exclude_lines = [
     "pass",
     "rank_zero_warn",
     "raise NotImplementedError",
+    "except Exception"
 ]
 
 [tool.pytest.ini_options]
