add patch to avoid https://github.com/omni-us/jsonargparse/issues/337

--- a/src/fts_examples/stable/config/advanced/fsdp/fts_fsdp_awp_overrides_profile.yaml
+++ b/src/fts_examples/stable/config/advanced/fsdp/fts_fsdp_awp_overrides_profile.yaml
@@ -22,10 +22,11 @@ trainer:
       verbose: false
       mode: min
   strategy:
-    class_path: lightning.pytorch.strategies.FSDPStrategy
+    # temporary patch to avoid jsonargparse issue https://github.com/omni-us/jsonargparse/issues/337
+    class_path: fts_examples.stable.cli_experiment_utils.CLIpatched_FSDPStrategy
+    #class_path: lightning.pytorch.strategies.FSDPStrategy
     init_args:
       cpu_offload: false
-      # TODO: this currently may encounter jsonargparse bug https://github.com/omni-us/jsonargparse/issues/337
       activation_checkpointing_policy:
         class_path: torch.distributed.fsdp.wrap.ModuleWrapPolicy
         init_args:
