condition patch of `FSDPStrategy` to avoid https://github.com/omni-us/jsonargparse/issues/337 on `jsonargparse` < 4.23.1

--- a/src/fts_examples/stable/config/advanced/fsdp/fts_fsdp_basic_profile.yaml
+++ b/src/fts_examples/stable/config/advanced/fsdp/fts_fsdp_basic_profile.yaml
@@ -20,8 +20,8 @@ trainer:
       verbose: false
       mode: min
   strategy:
-    # temporary patch to avoid jsonargparse issue https://github.com/omni-us/jsonargparse/issues/337
-    class_path: fts_examples.stable.cli_experiment_utils.CLIpatched_FSDPStrategy
+    # patch FSDPStrategy to avoid https://github.com/omni-us/jsonargparse/issues/337 with `jsonargparse` < 4.23.1
+    class_path: fts_examples.stable.cli_experiment_utils.PatchedFSDPStrategy
     # class_path: lightning.pytorch.strategies.FSDPStrategy
     init_args:
       cpu_offload: false
