--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -45,10 +45,10 @@ jobs:
         # tests will include oldest and newest tested patch versions of pytorch-lightning
         requires: ["oldest", "latest"]
         release: ["latest"]
-        exclude:  # PyTorch 1.9 does not support python 3.10
-          - {os: ubuntu-20.04, python-version: "3.10", requires: "oldest"}
-          - {os: windows-2022, python-version: "3.10", requires: "oldest"}
-          - {os: macOS-11, python-version: "3.10", requires: "oldest"}
+        # exclude:
+        #  - {os: ubuntu-20.04, python-version: "3.10", requires: "oldest"}
+        #  - {os: windows-2022, python-version: "3.10", requires: "oldest"}
+        #  - {os: macOS-11, python-version: "3.10", requires: "oldest"}
         # include:
         #   # adding when using a release candidate
         #   # - {os: ubuntu-20.04, python-version: "3.10", requires: "latest", release: "pre"}
