--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -45,7 +45,7 @@ jobs:
         # tests will include oldest and newest tested patch versions of pytorch-lightning
         requires: ["oldest", "latest"]
         release: ["latest"]
-        # exclude:
+        # exclude:  # note that occasionally, the oldest PyTorch version does not support the latest python version
         #  - {os: ubuntu-20.04, python-version: "3.10", requires: "oldest"}
         #  - {os: windows-2022, python-version: "3.10", requires: "oldest"}
         #  - {os: macOS-11, python-version: "3.10", requires: "oldest"}
