--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -41,14 +41,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, windows-2022, macOS-11]
-        python-version: ["3.8", "3.10"]  # minimum, maximum
+        python-version: ["3.8", "3.11"]  # minimum, maximum
         # tests will include oldest and newest tested patch versions of pytorch-lightning
         requires: ["oldest", "latest"]
         release: ["latest"]
-        # exclude:  # note that occasionally, the oldest PyTorch version does not support the latest python version
-        #  - {os: ubuntu-20.04, python-version: "3.10", requires: "oldest"}
-        #  - {os: windows-2022, python-version: "3.10", requires: "oldest"}
-        #  - {os: macOS-11, python-version: "3.10", requires: "oldest"}
+        exclude:  # note that occasionally, the oldest PyTorch version does not support the latest python version
+          - {os: ubuntu-20.04, python-version: "3.11", requires: "oldest"}
+          - {os: windows-2022, python-version: "3.11", requires: "oldest"}
+          - {os: macOS-11, python-version: "3.11", requires: "oldest"}
         # include:
         #   # adding when using a release candidate
         #   # - {os: ubuntu-20.04, python-version: "3.10", requires: "latest", release: "pre"}
