--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ exclude = [
     "temp",
 ]
 ignore-init-module-imports = true
-format = "pylint"
+output-format = "pylint"
 
 [tool.ruff.per-file-ignores]
 "src/fts_examples/stable/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]
