--- a/dockers/base-cuda/Dockerfile
+++ b/dockers/base-cuda/Dockerfile
@@ -91,9 +91,9 @@ RUN \
         # ... pytorch patch version
         # pip install torch==1.11.1+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html; \
         # ... pytorch nightly dev version
-        pip install --pre torch==2.2.0.dev20231021  torchvision==0.17.0.dev20231021 -f https://download.pytorch.org/whl/nightly/cu121/torch_nightly.html; \
+        # pip install --pre torch==2.2.0.dev20231021  torchvision==0.17.0.dev20231021 -f https://download.pytorch.org/whl/nightly/cu121/torch_nightly.html; \
         # ... test channel
-        # pip install --pre torch torchvision -f https://download.pytorch.org/whl/test/cu121/torch_test.html; \
+        pip install --pre torch torchvision -f https://download.pytorch.org/whl/test/cu121/torch_test.html; \
     fi && \
     # Install all requirements
     pip install -r requirements/devel.txt --no-cache-dir && \
