initial removal of PyTorch 1.13.1 references, removal of `GREATER_OR_EQUAL_2_0` codepaths, removal of runif 1x and >=2.0 aliases, initial update of 1x specific gpu tests and verified full coverage, no 2.3.0 nightly build testing yet

--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -44,14 +44,11 @@ jobs:
   - job: pytest
     strategy:
       matrix:
-        'PyTorch | 1.13.1':
-          image: "speediedan/finetuning-scheduler:py3.10-pt1.13.1-pl2.2-azpl-init"
-          scope: "1.13.1"
         'PyTorch | 2.0.1':
-          image: "speediedan/finetuning-scheduler:py3.10-pt2.0.1-pl2.2-azpl-init"
+          image: "speediedan/finetuning-scheduler:py3.10-pt2.0.1-pl2.3-azpl-init"
           scope: "2.0.1"
         'PyTorch | latest':
-          image: "speediedan/finetuning-scheduler:py3.11-pt2.2.0-pl2.2-azpl-init"
+          image: "speediedan/finetuning-scheduler:py3.11-pt2.3.0-pl2.3-azpl-init"
           scope: ""
     # how long to run the job before automatically cancelling
     timeoutInMinutes: "100"
@@ -113,5 +110,5 @@ jobs:
         set -e
         . /tmp/venvs/fts_dev/bin/activate
         python -m pytest src/fts_examples/stable -v --maxfail=1 --durations=0 -W ignore:\`np.object\`:DeprecationWarning -W ignore:'`np.int` is':DeprecationWarning
-      condition: notIn(variables['scope'], '1.13.1', '2.0.1')
+      condition: notIn(variables['scope'], '2.0.1')
       displayName: 'Testing: examples'
