--- a/dockers/base-cuda/Dockerfile
+++ b/dockers/base-cuda/Dockerfile
@@ -17,7 +17,7 @@ ARG OS_VER=ubuntu20.04
 FROM nvidia/cuda:${CUDA_VERSION}-devel-${OS_VER}
 
 ARG PYTHON_VERSION=3.11
-ARG PYTORCH_VERSION=2.2.0
+ARG PYTORCH_VERSION=2.3.0
 ARG CUST_BUILD=0
 ARG MKL_THREADING_LAYER=GNU
 
@@ -91,9 +91,9 @@ RUN \
         # ... pytorch patch version
         # pip install torch==1.11.1+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html; \
         # ... pytorch nightly dev version
-        # pip install --pre torch==2.2.0.dev20231021  torchvision==0.17.0.dev20231021 -f https://download.pytorch.org/whl/nightly/cu121/torch_nightly.html; \
+        pip install --pre torch==2.3.0.dev20240201  torchvision==0.18.0.dev20240201 -f https://download.pytorch.org/whl/nightly/cu121/torch_nightly.html; \
         # ... test channel
-        pip install --pre torch torchvision -f https://download.pytorch.org/whl/test/cu121/torch_test.html; \
+        # pip install --pre torch torchvision -f https://download.pytorch.org/whl/test/cu121/torch_test.html; \
     fi && \
     # Install all requirements
     pip install -r requirements/devel.txt --no-cache-dir && \
